--- a/tko_br_account/views/account_view.xml
+++ b/tko_br_account/views/account_view.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="br_account.view_br_account_invoice_line_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='pis_cst']" position="after">
+                <field name="is_cust_invoice" invisible="1"/>
                 <field name="is_required" invisible="1"/>
             </xpath>
             <xpath expr="//field[@name='pis_cst']" position="replace">
