--- a/tko_br_account/views/account_invoice_view.xml
+++ b/tko_br_account/views/account_invoice_view.xml
@@ -14,6 +14,9 @@
             <field name="model">account.invoice</field>
             <field name="inherit_id" ref="account.invoice_form"/>
             <field name="arch" type="xml">
+                <field name="fiscal_position_id" position="after">
+                    <field name="numero_nfse"/>
+                </field>
                 <field name="amount_tax" position="after">
                     <field name="amount_tax_withholding" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('type','!=','out_invoice')]}"/>
                 </field>
