--- a/tko_br_account/views/account_view.xml
+++ b/tko_br_account/views/account_view.xml
@@ -20,7 +20,7 @@
                 <field name="ipi_cst" attrs="{'required':[('is_required','=',False),('product_type','=', 'product'),('is_cust_invoice','=',True)]}"/>
             </xpath>
             <xpath expr="//field[@name='service_type_id']" position="replace">
-                <field name="service_type_id" attrs="{'required':[('is_required','=',False),('product_type','=', 'service')]}"  domain="[('internal_type','=','normal')]"/>
+                <field name="service_type_id" attrs="{'required':[('is_cust_invoice','=',True),('product_type','=', 'service')]}"  domain="[('internal_type','=','normal')]"/>
             </xpath>
         </field>
     </record>
