--- a/tko_br_account/views/account_invoice_view.xml
+++ b/tko_br_account/views/account_invoice_view.xml
@@ -47,6 +47,44 @@
                 <field name="ii_valor" position="after">
                     <field name="ii_valor_retencao"/>
                 </field>
+                <field name="product_id" position="after">
+                    <field name="invoice_type" invisible="1"/>
+                </field>
+                <field name="tax_icms_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'icms')]</attribute>
+                </field>
+                <field name="tax_icms_st_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'icmsst')]</attribute>
+                </field>
+                <field name="tax_issqn_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'issqn')]</attribute>
+                </field>
+                <field name="tax_csll_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'csll')]</attribute>
+                </field>
+                <field name="tax_irpj_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'irpj')]</attribute>
+                </field>
+                <field name="tax_ipi_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'ipi')]</attribute>
+                </field>
+                <field name="tax_pis_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'pis')]</attribute>
+                </field>
+                <field name="tax_cofins_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'cofins')]</attribute>
+                </field>
+                <field name="tax_ii_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'ii')]</attribute>
+                </field>
+                <field name="tax_irrf_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'iirf')]</attribute>
+                </field>
+                <field name="tax_inss_id" position="attributes">
+                    <attribute name="domain">[('type_tax_use','in',[invoice_type, 'none']),('domain', '=', 'inss')]</attribute>
+                </field>
+                <!-- Remove 1st group CSLL, it is duplicated has a separate tab-->
+                <xpath expr="//page[@name='retencoes']/group/group" position="replace"/>
             </field>
         </record>
 
@@ -56,6 +94,9 @@
             <field name="model">account.invoice</field>
             <field name="inherit_id" ref="br_account.view_br_account_invoice_form"/>
             <field name="arch" type="xml">
+                <field name="total_bruto" position="replace">
+                    <field name="amount_untaxed" string="Total linhas da fatura "/>
+                </field>
                 <field name="total_tax" position="replace"/>
                 <field name="payment_mode_id" position="attributes">
                     <attribute name="domain">[('company_id','=',company_id)]</attribute>
@@ -71,16 +112,20 @@
                 <field name="fiscal_position_id" position="after">
                     <field name="numero_nfse"/>
                 </field>
-                <field name="amount_tax" position="after">
-                    <field name="amount_tax_withholding" widget="monetary" options="{'currency_field': 'currency_id'}"
-                           attrs="{'invisible': [('type','!=','out_invoice')]}"/>
-                </field>
                 <field name="tax_line_ids" position="before">
                     <separator string="Taxes"/>
                 </field>
+
+                <field name="amount_total" position="attributes">
+                    <attribute name="string">Total Bruto ( = )</attribute>
+                </field>
                 <field name="amount_total" position="after">
-                    <field name="total_tax" string="Impostos ( - ) " class="oe_subtotal_footer"/>
+                    <field name="amount_tax_withholding" widget="monetary" options="{'currency_field': 'currency_id'}"
+                           attrs="{'invisible': [('type','!=','out_invoice')]}"/>
                     <field name="amount_total_liquid" class="oe_subtotal_footer_separator"/>
+                    <field name="amount_tax" string="Impostos não retidos ( = )"/>
+
+
                 </field>
 
                 <xpath expr="//field[@name='tax_line_ids']//field[@name='amount']" position="attributes">
@@ -101,6 +146,47 @@
                         </tree>
                     </field>
                 </field>
+            </field>
+        </record>
+
+
+
+
+        <!--Supplier Inovice-->
+        <record id="view_l10n_br_account_supplier_invoice_form_inherited" model="ir.ui.view">
+            <field name="name">l10n_br_account.invoice.inherited</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_supplier_form"/>
+            <field name="arch" type="xml">
+                <field name="tax_line_ids" position="before">
+                    <separator string="Taxes"/>
+                </field>
+
+                <field name="amount_total" position="attributes">
+                    <attribute name="string">Total Bruto ( = )</attribute>
+                </field>
+                <field name="amount_total" position="after">
+                    <field name="amount_tax_withholding" widget="monetary" options="{'currency_field': 'currency_id'}"
+                           attrs="{'invisible': [('type','!=','out_invoice')]}"/>
+                    <field name="amount_total_liquid" class="oe_subtotal_footer_separator"/>
+                    <field name="amount_tax" string="Impostos não retidos ( = )"/>
+                </field>
+
+                <xpath expr="//field[@name='tax_line_ids']//field[@name='amount']" position="attributes">
+                    <attribute name="sum">amount</attribute>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="view_br_account_invoice_supplier_form" model="ir.ui.view">
+            <field name="name">l10n_br_account.invoice.inherited</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="br_account.view_br_account_invoice_supplier_form"/>
+            <field name="arch" type="xml">
+                <field name="total_bruto" position="replace">
+                    <field name="amount_untaxed" string="Total linhas da fatura "/>
+                </field>
+                <field name="total_tax" position="replace"/>
             </field>
         </record>
     </data>
