--- a/tko_br_account/views/account_tax_view.xml
+++ b/tko_br_account/views/account_tax_view.xml
@@ -1,5 +1,4 @@
-<openerp>
-    <data>
+<odoo>
         <record id="br_account_view_tax_form" model="ir.ui.view">
             <field name="name">l10n_br_account.tax.inherited</field>
             <field name="model">account.tax</field>
@@ -39,7 +38,4 @@
                 </field>
             </field>
         </record>
-
-
-    </data>
-</openerp>
+</odoo>
