--- a/tko_br_cnab/views/payment_order_view.xml
+++ b/tko_br_cnab/views/payment_order_view.xml
@@ -13,7 +13,7 @@
                 <field name="writeoff_account_id"/>
             </field>
         </field>
-    </record>
+    </record>trustcode_payment_order_form_view
 
     <record id="br_cnab_payment_order_form_view_inherit" model="ir.ui.view">
         <field name="name">payment.order</field>
@@ -34,6 +34,12 @@
             <xpath expr="//form" position="attributes">
                 <attribute name="attrs">{'readonly': [('state','not in', 'draft')]}</attribute>
             </xpath>
+            <field name="payment_mode_id" position="attributes">
+                <field name="domain">[('company_id','=',company_id)]</field>
+            </field>
+            <field name="payment_mode_id" position="after">
+                <field name="company_id"/>
+            </field>
             <field name="state" position="attributes">
                 <attribute name="clickable">1</attribute>
             </field>
