--- a/tko_br_account/views/account_tax_view.xml
+++ b/tko_br_account/views/account_tax_view.xml
@@ -18,7 +18,7 @@
             <field name="inherit_id" ref="account.view_tax_form"/>
             <field name="arch" type="xml">
                 <field name="refund_account_id" position="after">
-                    <field name="analytic_id" domain="[('company_id','=',company_id)]"/>
+                    <field name="analytic_id" domain="['|',('company_id','=',False),('company_id','=',company_id)]"/>
                 </field>
                 <field name="price_include" position="attributes">
                     <attribute name="invisible">1</attribute>
@@ -32,7 +32,7 @@
                         <group>
                             <field name="deduced_account_id" domain="[('company_id','=',company_id)]"/>
                             <field name="refund_deduced_account_id" domain="[('company_id','=',company_id)]"/>
-                            <field name="withholding_analytic_id" domain="[('company_id','=',company_id)]"/>
+                            <field name="withholding_analytic_id" domain="['|',('company_id','=',False),('company_id','=',company_id)]"/>
                         </group>
                     </group>
                 </field>
