--- a/tko_br_account/views/account_invoice_view.xml
+++ b/tko_br_account/views/account_invoice_view.xml
@@ -5,6 +5,9 @@
             <field name="model">account.invoice.line</field>
             <field name="inherit_id" ref="br_account.view_br_account_invoice_line_form"/>
             <field name="arch" type="xml">
+                <field name="product_id" position="before">
+                    <field name="partner_id"/>
+                </field>
                 <page name="irpj" position="attributes">
                     <attribute name="attrs">{}</attribute>
                 </page>
