--- a/tko_br_nfse/views/invoice_eletronic_view.xml
+++ b/tko_br_nfse/views/invoice_eletronic_view.xml
@@ -4,10 +4,24 @@
         <field name="model">invoice.eletronic</field>
         <field name="inherit_id" ref="br_account_einvoice.br_account_invoice_eletronic_form"/>
         <field name="arch" type="xml">
+            <field name="valor_issqn" position="after">
+                <field name="issqn_percent" />
+            </field>
             <field name="mensagem_retorno" position="after">
                 <span attrs="{'invisible': [('model', 'not in', ('001')),('state', '!=', 'done')]}">
                     <br/><b>Link:</b> <field name="nfse_url" widget="url" class="oe_inline" readonly="1"/>
                 </span>
+            </field>
+        </field>
+    </record>
+
+    <record id="view_br_nfse_account_service_type_form" model="ir.ui.view">
+        <field name="name">view.br_nfse.account.service.type.form</field>
+        <field name="model">br_account.service.type</field>
+        <field name="inherit_id" ref="br_account.view_br_account_service_type_form"/>
+        <field name="arch" type="xml">
+            <field name="internal_type" position="after" >
+                <field name="issqn_percent" />
             </field>
         </field>
     </record>
